--- a/1.html
+++ b/1.html
@@ -7,13 +7,10 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
     <script src="../static/firebase2.js" type="module"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <style>
+        /*폰트 적용*/
         @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
         * {
@@ -22,111 +19,82 @@
             font-style: normal;
         }
 
+        /*노말라이즈 a,body,h,p*/
         a {
             color: inherit;
             text-decoration: none;
         }
 
         body {
-            margin: 0;
+            margin: 0;  
         }
 
         h1,
+        h2,
+        h3,
+        h4,
         p {
             margin: 0;
         }
 
+        /*레이아웃*/
         .header {
-            height: 80px;
-            background-color: blueviolet;
+            height: 50px;
         }
 
         .headline {
             height: 120px;
             margin-left: 40px;
             margin-right: 40px;
-            /*  background-color: gray;*/
+
             text-align: center;
         }
 
         .deckRotate {
             height: 420px;
-            /*background-color: blueviolet;*/
-            margin-left: 00px;
-            margin-right: 00px;
+            margin-left: 30px;
+            margin-right: 30px;
             text-align: center;
-            overflow: scroll;
-            overflow: auto;
-            white-space: nowrap;
         }
 
         .teamName {
             padding-top: 20px;
-
         }
 
         .introduceMent {
             padding-top: 10px;
         }
 
+
         .card {
-            width: 270px;
-            height: 420px;
-            transition: width 1s;
-            background-color: #3785d2;
-            border-radius: 10px;
             display: inline-block;
-            margin-left: 25px;
-            margin-right: 25px;
-            border: 1px solid white;
+            margin-left: 20px;
+            margin-right: 20px;
+            margin-bottom: 20px;
         }
 
+        /*카드 마우스 반응*/
         .card:hover {
-            width: 470px;
-            transition: width 1s;
-            height: 420px;
-            background-color: #3785d2;
-            border-radius: 10px;
-            display: inline-block;
-            margin-left: 25px;
-            margin-right: 25px;
-            border: 1px solid white;
+            transition: background-color 0.5s;
+            background-color: rgba(2, 102, 255, 0.7);
         }
 
-        .cardImageSlot {
-            width: 270px;
-            height: 420px;
-            background-color: beige;
-            border-top-right-radius: 10px;
-            border-top-left-radius: 10px;
+        .card-link:hover {
+            color: whitesmoke;
         }
-
-        .picture {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-top-right-radius: 10px;
-            border-top-left-radius: 10px;
-        }
-
-
-
-
     </style>
 
     <script>
-
+        function PopUp() {
+            alert('따란~');
+        }
     </script>
 </head>
 
 
 <body>
 
-    <!--
-    <div class="header">
-    </div>
--->
-
+    <!--상단 메뉴바-->
     <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
@@ -136,39 +104,67 @@
         </ul>
     </header>
 
+    <!--팀명 타이포 헤드라인-->
     <div class="headline">
         <h1 class="teamName">취중코오딩</h1>
         <p class="introduceMent">저희 팀원들을 소개합니다!</p>
     </div>
 
+    <!--하단 카드존-->
     <div class="deckRotate">
 
-        <div class="card">
-            <div class="cardImageSlot">
-                <img src="/Users/qui2dty/Desktop/박새로이.webp" alt="" class="picture">
+        <!--카드-->
+        <div class="card" style="width: 18rem;" onclick="PopUp()">
+            <img src="/Users/qui2dty/Desktop/박새로이.webp" class="card-img-top" alt="...">
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">NAME</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">GitHub</a>
+                <a href="#" class="card-link">Blog</a>
+            </div>
+        </div>
+        <!--카드-->
+
+
+        <div class="card" style="width: 18rem;">
+            <img src="/Users/qui2dty/Desktop/박새로이.webp" class="card-img-top" alt="...">
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">NAME</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">GitHub</a>
+                <a href="#" class="card-link">Blog</a>
             </div>
         </div>
 
-        <div class="card">
-            <div class="cardImageSlot">
-                <img src="/Users/qui2dty/Desktop/김다미.webp" alt="" class="picture">
+        <div class="card" style="width: 18rem;">
+            <img src="/Users/qui2dty/Desktop/박새로이.webp" class="card-img-top" alt="...">
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">NAME</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">GitHub</a>
+                <a href="#" class="card-link">Blog</a>
             </div>
         </div>
 
-        <div class="card">
-            <div class="cardImageSlot">
-                <img src="/Users/qui2dty/Desktop/이름이.webp" alt="" class="picture">
-            </div>
-        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/Users/qui2dty/Desktop/박새로이.webp" class="card-img-top" alt="...">
 
-        <div class="card">
-            <div class="cardImageSlot">
-                <img src="/Users/qui2dty/Desktop/뭐였지.webp" alt="" class="picture">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">NAME</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">GitHub</a>
+                <a href="#" class="card-link">Blog</a>
             </div>
         </div>
 
     </div>
-
 
 
 </body>
