--- a/topmenu.html
+++ b/topmenu.html
@@ -1,60 +1,14 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body{
-            background-color: #c6bdff;
-        }
-        .top-menu {
-            background-color: #bdadff;
-            overflow: hidden;
-        }
-        .top-menu img{
-            width: 50px;
-            height: 50px;
-            float: left;
-            padding-right:10px;
-        }
-        .top-menu a {
-            float: left;
-            display: block;
-            color: black;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-        .top-menu a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-        @media (min-width:1440px){
-            .top-menu img{
-            width: 70px;
-            height: 70px;
-            float: left;
-            padding-right:10px;
-            }
-            .top-menu a {
-            font-size: 30px;
-            padding: 20px 26px;
-            }
-        }
-        @media (min-width:2560px){
-            .top-menu img{
-            width: 100px;
-            height: 100px;
-            float: left;
-            padding-right:10px;
-            }
-            .top-menu a {
-            font-size: 50px;
-            padding: 20px 26px;
-            }
-        }
-    </style></head><body>
+</head>
+<body>
     <div class="top-menu">
         <img src="../Source/Logo.png">
         <a href="./home.html">Team</a>
-        <a href="./member.html">Member</a>
-        <a href="#news">Blog</a>
-    </div></body></html>
+        <a href="./memdetail.html">Member</a>
+        <a href="./blog.html">Blog</a>
+    </div>
+</body>
+</html>
