--- a/memdetail.html
+++ b/memdetail.html
@@ -63,13 +63,13 @@
             color: #555;
         }
 
-        .mybtn {
+        .savebtn {
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
         }
 
-        .mybtn>button {
+        .savebtn>button {
             margin-right: 5px;
             width: 100%;
         }
@@ -199,6 +199,10 @@
                         <input type="text" id="modal-intro-input" class="form-control" placeholder="소개">
                         <label for="modal-intro-input">소개</label>
                     </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" id="modal-github-input" class="form-control" placeholder="깃허브 URL" />
+                        <label for="modal-github-input">깃허브 URL</label>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button id="save-modal-btn" type="button" class="btn">저장</button>
@@ -252,8 +256,12 @@
             <input type="text" class="form-control" id="intro" placeholder="소개">
             <label for="intro">소개</label>
         </div>
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="github" placeholder="깃허브 URL" />
+            <label for="github">깃허브 URL</label>
+        </div>
 
-        <div class="mybtn">
+        <div class="savebtn">
             <button id="savebtn" type="button" class="btn btn-danger">추가하기</button>
         </div>
     </div>
@@ -291,7 +299,7 @@
                 const member = doc.data();
                 let newCard = `
                     <div class="col">
-                        <div class="card h-100" data-bs-toggle="modal" data-bs-target="#memberInfoModal" data-id="${doc.id}" data-intro="${member.intro}">
+                        <div class="card h-100" data-bs-toggle="modal" data-bs-target="#memberInfoModal" data-id="${doc.id}" data-intro="${member.intro}" data-github="${member.github}">
                             <img src="${member.image}" class="card-img-top" style="width: 100%; height: 300px; object-fit: cover;">
                             <div class="card-body">
                                 <h5 class="card-title">${member.name}</h5>
@@ -307,16 +315,17 @@
         let thisCard = null;
 
         // 멤버 상세 정보 모달 데이터 설정
-        $('#memberInfoModal').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget);
-            var card = button.closest('.card');
+        $('#memberInfoModal').on('show.bs.modal', function (event) { //bootstrap event 사용
+            var btn = $(event.relatedTarget);
+            var card = btn.closest('.card');
             thisCard = card;
             var image = card.find('.card-img-top').attr('src');
             var name = card.find('.card-title').text();
 
-            $('#memberInfoModalLabel').text(name);                  // 이름
-            $('#info-modal-image').attr('src', image);              // 사진
-            $('#info-modal-intro').text(`${card.data('intro')}`);   // 소개
+            $('#memberInfoModalLabel').text(name);                              // 이름
+            $('#info-modal-image').attr('src', image);                          // 사진
+            $('#info-modal-intro').text(`${card.data('intro')}`);               // 소개
+            $("#info-modal-github").text(`깃허브 주소: ${card.data("github")}`); //깃허브
         });
 
         // 수정 버튼 클릭 시 비밀번호 확인 모달 활성화
@@ -340,6 +349,7 @@
                 var image = card.find('.card-img-top').attr('src');
                 var name = card.find('.card-title').text();
                 var intro = card.data('intro');
+                var github = card.data("github");
                 
                 $('#modal-image-input').val(image);
                 $('#modal-name-input').val(name);
@@ -365,11 +375,13 @@
                 let image = $('#image').val();
                 let name = $('#name').val();
                 let intro = $('#intro').val();
+                let github = $("#github").val();
 
                 let doc = {
                     'image': image,
                     'name': name,
-                    'intro': intro
+                    'intro': intro,
+                    'github': github
                 };
                 await addDoc(collection(db, "teams"), doc);
                 alert('저장 완료');
@@ -388,17 +400,20 @@
                 let image = $('#modal-image-input').val();
                 let name = $('#modal-name-input').val();
                 let intro = $('#modal-intro-input').val();
+                let github = $("#modal-github-input").val();
 
                 let docRef = doc(db, "teams", id);
                 await updateDoc(docRef, {
                     image: image,
                     name: name,
-                    intro: intro
+                    intro: intro,
+                    github: github,
                 });
 
                 thisCard.find('.card-img-top').attr('src', image);
                 thisCard.find('.card-title').text(name);
                 thisCard.data('intro', intro);
+                thisCard.data("github", github);
 
                 $('#memberEditModal').modal('hide');
                 alert('수정 완료');
