--- a/blog.html
+++ b/blog.html
@@ -48,6 +48,7 @@
     <div class="mytitle">
         <h1>취중코오딩의 멤버 블로그</h1>
     </div>
+    <div id="blog">
     <div class="blogcard1">
         <div class="row row-cols-1 row-cols-md-3 g-2" style="justify-content: space-evenly;">
             <div class="row g-3" style="background-color:#BDADFF">
@@ -106,6 +107,42 @@
             </div>
         </div>
     </div>
+</div>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
+        import { getAuth, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
+        import { getFirestore, collection, addDoc, getDocs, deleteDoc, updateDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyDm5y9osqExosFHFTZGfYvv2Olp0N87YOE",
+            authDomain: "sparta-952e0.firebaseapp.com",
+            projectId: "sparta-952e0",
+            storageBucket: "sparta-952e0.appspot.com",
+            messagingSenderId: "997683838612",
+            appId: "1:997683838612:web:660a308656015718197e81",
+            measurementId: "G-MBBHJ52JEG"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getFirestore(app);
+        
+        $(document).ready(async function () {
+            const querySnapshot = await getDocs(collection(db, "teams"));
+            querySnapshot.forEach((doc) => {
+                const memberData = doc.data();
+                let newBlog = `
+                    <div class="col-6" style="display: flex;">
+                        <img src="${memberData.image}" style="width:30%;">
+                        <div class="p-5 border bg-light"style="width:70%;cursor:pointer;"onclick="location.href='${memberData.github}';">${memberData.name}님의 깃허브</div>
+                    </div>
+                `;
+                console.log(newBlog);
+                $('#blog').append(newBlog);
+            });
+        });
+    </script>
+
 </body>
 
 </html>
