--- a/home.html
+++ b/home.html
@@ -3,15 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
-    <title>Home</title>
+    <title>취중코오딩</title>
     <link rel="stylesheet" href="./style.css">
+    
+    <!-- Bootstrap CSS 추가 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap js 추가 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 <div id="topmenu"></div>
 
 <div class="content">
-    <h1 style="text-align: center;">저희 취중코오딩은</h1>
+    <h1 style="text-align: center; padding: 60px;">저희 취중코오딩은</h1>
     <img class="bulb" src="../Source/Bulb.png">
     <div class="content-box">
         <p id="team-content"></p>
