--- a/topmenu.html
+++ b/topmenu.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="top-menu">
-        <img src="../Source/Logo.png">
+        <img src="../Source/Logo.png" class="logo">
         <a href="./home.html">Team</a>
         <a href="./memdetail.html">Member</a>
         <a href="./blog.html">Blog</a>
