--- a/blog.html
+++ b/blog.html
@@ -1,49 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <style>
-        .mytitle {
-            height: 250px;
-            color: black;
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
 </head>
-
-<body style="background-color: #AEA1FF;">
+<body style="background-color: #c6bdff;">
     <div id="topmenu"></div>
-    <div class="mytitle">
+    <div class="mytitle" style="text-align: center; margin-top: 5%;">
         <h1>취중코오딩의 멤버 블로그</h1>
     </div>
-    <div class="blogcard" style="margin: 50px 25px;">
-        <div id="blog" class="row g-3">
+    <div class="container" style="margin-top: 50px;">
+        <div id="blog" class="row g-5">
         </div>
-    </div>
-    <div id="topmenu"></div>
-    <script>
+      </div>
+      <script>
         $(document).ready(function () {
-            $("#topmenu").load("/../topmenu.html", function () {
+                $("#topmenu").load("/../topmenu.html", function () {
                 //페이지 별로 다른 메뉴 css 적용도 가능
-                document.getElementById("topmenu").classList.add("show");
-            });
-        })
-    </script>
+                    document.getElementById("topmenu").classList.add("show");
+                });
+            })
+        </script>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
         import { getAuth, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js";
         import { getFirestore, collection, addDoc, getDocs, deleteDoc, updateDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
 
+        // Firebase 초기화
         const firebaseConfig = {
             apiKey: "AIzaSyDm5y9osqExosFHFTZGfYvv2Olp0N87YOE",
             authDomain: "sparta-952e0.firebaseapp.com",
@@ -58,6 +46,7 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
+        // Firestore에서 멤버 정보를 가져와 카드 생성
         $(document).ready(async function () {
             const querySnapshot = await getDocs(collection(db, "teams"));
             querySnapshot.forEach((doc) => {
@@ -65,7 +54,7 @@
                 let newBlog = `
                     <div class="col-6" style="display: flex;">
                         <img src="${memberData.image}" style="width:30%;">
-                        <div class="p-5 border bg-light"style="width:70%;cursor:pointer;"onclick="location.href='${memberData.github}';">${memberData.name}님의 깃허브</div>
+                        <div class="p-5 border bg-light"style="width:70%;cursor:pointer;"onclick="location.href='${memberData.github}';">${memberData.name}님의 블로그</div>
                     </div>
                 `;
                 console.log(newBlog);
@@ -73,7 +62,5 @@
             });
         });
     </script>
-
 </body>
-
 </html>
