--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 <body style="background-color: #c6bdff;">
     <div id="topmenu"></div>
     <div class="mytitle" style="text-align: center; margin-top: 5%;">
-        <h1>취중코오딩의 멤버 블로그</h1>
+        <h1>취중코오딩 멤버 블로그</h1>
     </div>
     <div class="container" style="margin-top: 50px;">
         <div id="blog" class="row g-5">
